--- a/Index.html
+++ b/Index.html
@@ -3,30 +3,39 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Generador de Kits - Estilo Rust</title>
-  <style>
+  <title>Generador de Kits para Rust.</title>
+<style>
+    /* General body styling */
     body {
-      background-color: #1e1e1e;
-      font-family: 'Roboto', sans-serif;
-      color: #fff;
+      background-color: #2b2b2b;  /* Un gris oscuro que asemeja metal oxidado */
+      font-family: 'Bebas Neue', sans-serif;  /* Tipografía robusta y de estilo industrial */
+      color: #e0e0e0;  /* Color gris claro para buen contraste */
       margin: 0;
       padding: 0;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
+      height: 100vh;
+      background-image: url('https://rustlabs.com/static/img/ui/concrete_bg.jpg'); /* Fondo con textura */
+      background-size: cover;
     }
 
     h1 {
-      color: #f39c12;
+      color: #f39c12;  /* Naranja brillante */
+      font-size: 3rem;
+      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);  /* Sombra para destacar más */
       margin-top: 20px;
+      text-transform: uppercase;  /* Letras mayúsculas */
     }
 
+    /* Contenedores generales */
     .container {
       display: flex;
-      justify-content: space-around;
+      justify-content: space-between;
       width: 80%;
       padding: 20px;
+      margin-top: 20px;
     }
 
     .controls {
@@ -35,55 +44,94 @@
       align-items: flex-start;
       margin-bottom: 20px;
       width: 100%;
+      background-color: rgba(0, 0, 0, 0.8);  /* Fondo semi-transparente oscuro */
+      padding: 20px;
+      border-radius: 10px;
+      border: 2px solid #555;  /* Borde metálico */
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);  /* Sombra para dar profundidad */
     }
 
     .controls label, .controls button {
       margin-top: 10px;
+      font-size: 1.2rem;
+      color: #ffae42;  /* Naranja suave */
     }
 
     .controls input, .controls select, .controls button {
-      padding: 5px;
+      padding: 10px;
       margin-top: 5px;
       border: none;
       border-radius: 5px;
+      font-size: 1.1rem;
+      background-color: #3a3a3a;
+      color: #f39c12;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
       cursor: pointer;
     }
 
+    .controls input:focus, .controls select:focus, .controls button:focus {
+      outline: none;
+      border: 1px solid #f39c12;  /* Efecto de foco */
+    }
+
+    /* Lista de items */
     .items-list {
-      background-color: #2c2c2c;
-      border: 2px solid #333;
-      padding: 20px;
-      border-radius: 8px;
+      background-color: rgba(0, 0, 0, 0.8);
+      border: 2px solid #444;  /* Borde más pronunciado */
+      padding: 15px;
+      border-radius: 10px;
       width: 100%;
       max-height: 300px;
       overflow-y: auto;
-      display: none; /* Oculto inicialmente */
+      display: none;  /* Oculto inicialmente */
+    }
+
+    .items-list h2 {
+      color: #ffae42;
+      text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.7);
     }
 
     .item {
       padding: 10px;
-      border-bottom: 1px solid #444;
+      border-bottom: 1px solid #555;
+      color: #e0e0e0;
+      font-size: 1.1rem;
       cursor: pointer;
+      transition: background-color 0.3s ease;
     }
 
     .item:hover {
-      background-color: #333;
+      background-color: #3b3b3b;
     }
 
+    /* Botón de copiar */
     .copy-btn {
       margin-top: 20px;
-      background-color: #f39c12;
+      background-color: #e74c3c;  /* Rojo intenso */
       border: none;
       color: #fff;
       padding: 10px 20px;
       cursor: pointer;
       border-radius: 5px;
+      font-size: 1.2rem;
+      text-transform: uppercase;
+      box-shadow: 0 6px 10px rgba(0, 0, 0, 0.3);
+      transition: background-color 0.3s ease, transform 0.2s ease;
     }
 
     .copy-btn:hover {
-      background-color: #e67e22;
+      background-color: #c0392b;
+      transform: translateY(-3px);  /* Efecto de botón flotante */
     }
-  </style>
+
+    /* Pequeños ajustes de hover y visualización */
+    .copy-btn:focus {
+      outline: none;
+      background-color: #e74c3c;
+      border: 1px solid #f39c12;
+    }
+</style>
+
 </head>
 <body>
 
