--- a/Index.html
+++ b/Index.html
@@ -67,21 +67,6 @@
             border: 1px solid #FF4500; /* Borde de comandos */
         }
 
-        .command-text {
-            flex-grow: 1;
-            margin-right: 10px;
-        }
-
-        .command-actions {
-            display: flex;
-            gap: 5px;
-        }
-
-        .copied-message {
-            color: #28a745;
-            font-weight: bold;
-        }
-
         footer {
             text-align: center;
             color: #EAEAEA;
@@ -96,31 +81,6 @@
             gap: 20px;
             margin: 20px 0;
         }
-
-        /* Estilo para la lista de items */
-        .items-list {
-            margin-top: 10px;
-            background-color: #2b2b2b; /* Fondo gris oscuro */
-            border-radius: 5px;
-            padding: 10px;
-            max-height: 300px;
-            overflow-y: auto;
-        }
-
-        .item {
-            padding: 8px;
-            margin: 5px 0;
-            background-color: #444; /* Fondo de cada ítem */
-            border-radius: 3px;
-            border: 1px solid #FF4500; /* Borde de ítem */
-            cursor: pointer;
-            transition: background-color 0.3s;
-        }
-
-        .item:hover {
-            background-color: #555; /* Fondo al pasar el mouse */
-        }
-
     </style>
 </head>
 <body>
@@ -151,14 +111,8 @@
         <!-- Aquí se añadirán dinámicamente las opciones -->
     </select>
 
-    <label for="selected_item_name">Nombre del ítem seleccionado:</label>
-    <input type="text" id="selected_item_name" readonly placeholder="Nombre del ítem seleccionado" />
-
-    <label for="selected_item_id">ID del ítem seleccionado:</label>
-    <input type="text" id="selected_item_id" readonly placeholder="ID del ítem seleccionado" />
-
-    <label for="kit_name">Nombre del Kit:</label>
-    <input type="text" id="kit_name" placeholder="Escribe el nombre del kit o elige KaosBot">
+    <label for="kit_name">Escribe el nombre del kit o elige KaosBot:</label>
+    <input type="text" id="kit_name" placeholder="Escribe el nombre del kit">
 
     <label for="kaosbot_kits">Seleccionar un kit de KaosBot:</label>
     <select id="kaosbot_kits">
@@ -206,9 +160,50 @@
     <div id="kit_list"></div>
     <div id="community_kits"></div>
 
-    <!-- Incluir el script externo items.js -->
-    <script src="items.js"></script>
     <script>
+        // Definición de los items como si fueran el contenido de items.js
+        const items = {
+            ammo: [
+                { id: "ammo.rifle", name: "Rifle Ammo" },
+                { id: "ammo.pistol", name: "Pistol Ammo" },
+                { id: "ammo.shotgun", name: "Shotgun Ammo" }
+            ],
+            weapons: [
+                { id: "rifle.ak", name: "AK-47" },
+                { id: "pistol.semiauto", name: "Semi-Auto Pistol" }
+            ],
+            construction: [
+                { id: "wood.plank", name: "Wood Plank" },
+                { id: "stone", name: "Stone" }
+            ],
+            attire: [
+                { id: "hoodie", name: "Hoodie" },
+                { id: "pants", name: "Pants" }
+            ],
+            tools: [
+                { id: "axe.salvaged", name: "Salvaged Axe" },
+                { id: "hammer", name: "Hammer" }
+            ],
+            medsAndTeas: [
+                { id: "syringe.medical", name: "Medical Syringe" },
+                { id: "bandage", name: "Bandage" }
+            ],
+            trapsAndMiscellaneous: [
+                { id: "trap.bear", name: "Bear Trap" },
+                { id: "trap.turret", name: "Turret" }
+            ],
+            components: [
+                { id: "metal.fragments", name: "Metal Fragments" },
+                { id: "highqual.metal", name: "High Quality Metal" }
+            ],
+            electrical: [
+                { id: "electric.surge", name: "Electric Surge" },
+                               { id: "electric.generator", name: "Electric Generator" },
+                { id: "wire", name: "Wire" },
+                { id: "solar.panel", name: "Solar Panel" }
+            ]
+        };
+
         const commands = [];
         const predefinedKits = [
             {
@@ -305,19 +300,10 @@
 
         function showItemDetails() {
             const itemList = document.getElementById('item_list');
-            const selectedItemName = document.getElementById('selected_item_name');
-            const selectedItemId = document.getElementById('selected_item_id');
             const selectedCategory = document.getElementById('item_category').value;
 
             const selectedItem = items[selectedCategory].find(item => item.id === itemList.value);
-
-            if (selectedItem) {
-                selectedItemName.value = selectedItem.name;
-                selectedItemId.value = selectedItem.id;
-            } else {
-                selectedItemName.value = '';
-                selectedItemId.value = '';
-            }
+            if (!selectedItem) return;
         }
 
         function generateCommand() {
@@ -398,7 +384,7 @@
 
         function deleteKit(kitName) {
             if (confirm(`Vas a borrar toda la lista del "${kitName}". ¿Estás seguro?`)) {
-                                commands = commands.filter(k => k.name !== kitName);
+                commands = commands.filter(k => k.name !== kitName);
                 localStorage.setItem('commands', JSON.stringify(commands));
                 displayCommands();
             }
