--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Generador de Comandos - Rust Style</title>
+    <title>Generador de Kits - Rust </title>
     <style>
         body {
             font-family: 'Press Start 2P', sans-serif; /* Estilo gaming */
